--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,29 @@
 page-home {
+    .product-col{
+        display: flex;
+        justify-content: center;
+    }
 
+    [col-6], .grid, .col { padding: 0px; }
+
+    .card-content-md { padding: 10px; }
+
+    .card-title-md { margin: 0px; padding: 0; }
+
+    .header-banner {
+        height:150px;
+		min-height:150px;
+    }
+
+    .header-banner .slide-zoom {
+		height: 100%;
+	}
+
+    ion-slides {
+        height: 150px;
+    }
+
+    .header-banner ion-card {
+        height: 140px;
+    }
 }
